# TG_cpp

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  build_and_run.sh  readme.md
config/: allowed_ip.json
src/: main.cpp
src/db/: database.cpp  database.hpp
src/network/: curl_request.cpp  curl_request.hpp
src/routes/: route.cpp  route.hpp
src/utils/: ip_checker.cpp  ip_checker.hpp  utils.cpp  utils.hpp
src/whisper/: whisper_handler.cpp  whisper_handler.hpp
